Fixed button overlapping image issue

--- a/style.css
+++ b/style.css
@@ -7,15 +7,16 @@ h1 {
     left: 50%;
     width: 100px;
     margin-left: -50px;
-	bottom: 20%;
+	bottom: -50px;
 }
 
 .book-display {
+	position: relative;
 	width: 30%;
 	margin: 0 auto;
 }
 
 .book-img {
 	width: 100%;
-	height: 50%;
+	height: 100%;
 }
